# Log

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Log.h  LogDisabled.h
test/: logTest.cpp
